--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,19 @@ body {
   padding: 1.5rem 3.5rem;
 }
 
+.settings-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: var(--white);
+}
+
+.length-container {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
 .hori-line {
   width: 100%;
   height: 0.125rem;
@@ -43,6 +56,10 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 1.5rem;
+}
+
+.p-field-container {
+  display: flex;
 }
 
 /* FONTS */
@@ -59,6 +76,11 @@ body {
   margin-bottom: 30px;
   color: var(--mediumgray);
   font-size: 1.15rem;
+}
+
+.clipboard-tip {
+  color: var(--mediumgray);
+  font-size: 0.8rem;
 }
 
 /* BUTTONS */
@@ -81,6 +103,16 @@ body {
 }
 
 /* INPUTS */
+.length-container input {
+  color: #55f991;
+  font-family: Inter;
+  font-size: 1rem;
+  padding: 5px 10px;
+  background-color: var(--darkblue2);
+  border: none;
+  border-radius: 0.375rem;
+}
+
 .generated-p-field {
   width: 100%;
   color: #55f991;
@@ -91,4 +123,16 @@ body {
   background-color: var(--darkblue2);
   border: none;
   border-radius: 0.375rem;
+  cursor: pointer;
+}
+
+/* LABELS */
+.length-container label,
+.symbols-numbers-container label {
+  font-size: 1.1 rem;
+}
+
+/* JS */
+.disabled {
+  opacity: 0.6;
 }
